cleaned the notebook for public repo

--- a/IntegrationOfDefGrad.ipynb
+++ b/IntegrationOfDefGrad.ipynb
@@ -18,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "southwest-remains",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "%run fourthOrderTensor.py  #this file contains the functions to create and operate on 4th order elastic tensor.\n",
-    "%run createSchmid.py  # this file contains the create schimd function. Don't change this file"
+    "%run createSchmid.py  # this file contains the create schimd function. Don't change this file\n",
+    "%run updateHardness_vocekocks.py"
    ]
   },
   {
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "advised-divide",
    "metadata": {},
    "outputs": [],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "downtown-engineering",
    "metadata": {},
    "outputs": [],
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "ancient-durham",
    "metadata": {},
    "outputs": [],
@@ -129,7 +130,7 @@
     "        gamma_dot[i] = gamma_dot_0*(tau[i]/new_state.hardness[i])*(np.fabs(tau[i]/new_state.hardness[i])**((1.0/m_param)-1))\n",
     "        residual += gamma_dot[i]*schmid[i]\n",
     "    residual += (-1/dt)*(np.identity(3) - M)\n",
-    "    norm_residual  = np.linalg.norm(residual)\n",
+    "    norm_residual  = np.linalg.norm(residual, ord = 'fro')\n",
     "    return (norm_residual, residual)"
    ]
   },
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "id": "after-trail",
    "metadata": {
     "scrolled": true
@@ -197,39 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "julian-performance",
-   "metadata": {},
-   "source": [
-    "### Function to update hardness"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "external-spirituality",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def updateHardness_vocekocks(current_state, new_state, dt, m_param, g_0, gamma_dot_0, G_0, g_s_0, gamma_dot_s, omega, num_slip_sys, schmid, elastTensor):\n",
-    "    (C_e, E_e, S, tau) = elasticCalculations(num_slip_sys, schmid, elastTensor, new_state.defGrad_elastic)\n",
-    "    \n",
-    "    gamma_dot_total = 0.0\n",
-    "    for i in range(0, num_slip_sys):\n",
-    "        gamma_dot_total += gamma_dot_0 * ( np.fabs(tau[i]/new_state.hardness[i])**(1.0/m_param))\n",
-    "    \n",
-    "    g_s_np1 = new_state.hardness[0] \n",
-    "    g_s_new = g_s_0*(np.fabs(gamma_dot_total/gamma_dot_s)**omega) \n",
-    "    g_s_new = ((g_s_new-g_0)*current_state.hardness[0] + dt*G_0*g_s_new*gamma_dot_total)/((g_s_new-g_0) + dt*G_0*gamma_dot_total)\n",
-    "    \n",
-    "    for i in range (0,num_slip_sys):\n",
-    "        new_state.hardness[i] = g_s_new\n",
-    "    \n",
-    "    return np.fabs((g_s_new-g_s_np1)/g_s_np1)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "partial-analysis",
    "metadata": {},
    "source": [
@@ -253,34 +221,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "acting-colors",
    "metadata": {},
    "outputs": [],
    "source": [
     "########################################\n",
     "# Material Properties\n",
-    "C11 = 100000.0 \n",
-    "C33 = 118000.0 \n",
-    "C12 =  45000.0 \n",
-    "C13 =  27000.0 \n",
-    "C44 =  25000.0 \n",
-    "C66 = 0.5*(C11 - C12)\n",
-    "m_param = 0.005\n",
-    "g_0 =  220.0\n",
-    "gamma_dot_0 = 1.0\n",
-    "G_0 = 120.0\n",
-    "g_s_0 = 250.0\n",
-    "gamma_dot_s = 5.0e+10\n",
-    "omega = 0.0\n",
+    "C11 = 114290.0 ;\n",
+    "C33 = 157580.0 ;\n",
+    "C12 =  79870.0 ;\n",
+    "C13 =  77326.9 ;\n",
+    "C44 =  24030.0 ;\n",
+    "C66 = 0.5*(C11 - C12);\n",
+    "m_param = 0.38;\n",
+    "g_0 =  13250.0;\n",
+    "gamma_dot_0 = 1.0;\n",
+    "G_0 = 120.0;\n",
+    "g_s_0 = 250.0;\n",
+    "gamma_dot_s = 5.0e+10;\n",
+    "omega = 0.0;\n",
+    "a_bcc = 3.196;\n",
+    "a_hcp = 2.943 ;\n",
+    "c_hcp = 4.68;\n",
+    "aa_ab=a_hcp/a_bcc;\n",
+    "ca_ab=c_hcp/a_bcc;\n",
     "########################################\n",
     "elastTensor = ElastTensor(C11, C12, C13, C33, C44, C66)  # Get 4th order elastic tensor\n",
-    "(num_slip_sys, schmid) = createSchimid(\"fcc\") #create schmid tensor"
+    "(num_slip_sys, schmid) = createSchimid(\"hcp\") #create schmid tensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "photographic-ground",
    "metadata": {},
    "outputs": [],
@@ -298,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "related-kernel",
    "metadata": {},
    "outputs": [],
@@ -309,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "declared-empty",
    "metadata": {},
    "outputs": [],
@@ -321,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "wanted-antarctica",
    "metadata": {},
    "outputs": [],
@@ -334,25 +307,8 @@
     "hardness = np.ones(num_slip_sys)\n",
     "pressure = 0\n",
     "# Now, using these values construct the current_state object\n",
-    "current_state = state(sigma, defGrad, defGrad_elastic, defGrad_plastic, hardness, pressure)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "interior-allowance",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# initialize the trial state (no need to change this)\n",
-    "\n",
-    "sigma = np.zeros((3,3))\n",
-    "defGrad = np.identity(3)\n",
-    "defGrad_elastic = np.identity(3)\n",
-    "defGrad_plastic = np.identity(3)\n",
-    "hardness = np.ones(num_slip_sys)\n",
-    "pressure = 0\n",
-    "new_state = state(sigma, defGrad, defGrad_elastic, defGrad_plastic, hardness, pressure)"
+    "current_state = state(sigma, defGrad, defGrad_elastic, defGrad_plastic, hardness, pressure)\n",
+    "new_state = current_state;"
    ]
   },
   {
@@ -365,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "id": "positive-brighton",
    "metadata": {},
    "outputs": [],
@@ -386,10 +342,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "id": "usual-ethiopia",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.000  0.000  0.000  0.000  1.000  0.000  0.000  0.000  1.000]\n",
+      " [ 1.021  0.063  0.000  0.000  0.992  0.000  0.000  0.000  1.012]\n",
+      " [ 1.042  0.125  0.000  0.000  0.984  0.000  0.000  0.000  1.024]\n",
+      " [ 1.063  0.188  0.000  0.000  0.977  0.000  0.000  0.000  1.035]]\n"
+     ]
+    }
+   ],
    "source": [
     "hardness_error = 0.0\n",
     "L2norm = 0.0\n",
@@ -398,7 +365,12 @@
     "Fp_lastgood = np.identity(3)\n",
     "\n",
     "new_state.pressure = current_state.pressure + dp # Set new state's presssure\n",
-    "new_state.defGrad = idefGrad*R0   # Apply rotation to input deformation gradient and set new state's def grad"
+    "\n",
+    "numSteps = 4;  # number of steps over which Ft is applied\n",
+    "Ft = np.array([[aa_ab*2/np.sqrt(3), aa_ab*np.sqrt(6)/12, 0],[ 0, aa_ab*3*np.sqrt(2)/4, 0],[ 0, 0, ca_ab/np.sqrt(2)]]);\n",
+    "Ft_s =np.array([np.linspace(1, Ft[0,0],numSteps), np.linspace(0, Ft[0,1],numSteps), np.zeros(numSteps),np.zeros(numSteps), np.linspace(1, Ft[1,1],numSteps),  np.zeros(numSteps),np.zeros(numSteps),np.zeros(numSteps), np.linspace(1, Ft[2,2],numSteps)]).T\n",
+    "np.set_printoptions(formatter={'float': '{: 0.3f}'.format})\n",
+    "print(Ft_s)"
    ]
   },
   {
@@ -411,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "thirty-opportunity",
    "metadata": {},
    "outputs": [
@@ -419,53 +391,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n"
+      "[[ 328.796  0.000  0.000]\n",
+      " [ 0.000  328.796  0.000]\n",
+      " [ 0.000  0.000 -657.592]]\n"
      ]
     }
    ],
    "source": [
-    "# start hardness loop\n",
-    "for hardness_iter in range(0,1):\n",
-    "    \n",
-    "#     hardness convergence check\n",
-    "    if hardness_iter==max_hardness_iter:\n",
-    "        print(\"Max hardness iteration reached!\")\n",
-    "        break\n",
-    "    # start residual loop\n",
-    "    residual_not_converged = False\n",
-    "    for residual_iter in range(0, 1):\n",
-    "        \n",
-    "        # residual convergence check\n",
-    "        if residual_iter==max_residual_iter:\n",
-    "            residual_not_converged = True\n",
+    "# Main loop\n",
+    "for nsteps in range(0,numSteps):\n",
+    "\n",
+    "    defGrad_transform = Ft_s[nsteps,:].reshape((3,3))\n",
+    "    new_state.defGrad = idefGrad*R0*np.linalg.inv(defGrad_transform)\n",
+    "    # start hardness loop\n",
+    "    for hardness_iter in range(0,max_hardness_iter):\n",
+    "\n",
+    "        #hardness convergence check\n",
+    "        if hardness_iter==max_hardness_iter:\n",
+    "            print(\"Max hardness iteration reached!\")\n",
     "            break\n",
-    "        \n",
-    "        # Make initial guess\n",
-    "        if residual_iter == 0 and hardness_iter == 0:\n",
-    "            new_state.defGrad_elastic = current_state.defGrad_elastic\n",
-    "            new_state.defGrad_pastic = np.matmul(np.linalg.inv(new_state.defGrad_elastic), new_state.defGrad)\n",
-    "            new_state.hardness = current_state.hardness\n",
-    "        \n",
-    "        # elastic stress calculations\n",
-    "        (C_e, E_e, S, tau) = elasticCalculations(num_slip_sys, schmid, elastTensor, new_state.defGrad_elastic)\n",
-    "            \n",
-    "        # compute residual\n",
-    "        (L2norm, residual) = compute_residual(current_state, new_state, gamma_dot_0, num_slip_sys, tau, m_param, schmid, dt)\n",
-    "        \n",
-    "        # convergence check\n",
-    "        if L2norm < L2norm_tolerance:            \n",
-    "            break\n",
-    "        elif residual_iter > 0 and L2norm > L2norm_old:\n",
-    "            new_state.defGrad_pastic = Fp_lastgood\n",
-    "            new_state.defGrad_eastic = new_state.defGrad*np.linalg.inv(new_state.defGrad_pastic)    \n",
-    "            dFp = 0.5*dFp\n",
-    "        else:\n",
-    "            # proceed to solve if residual is decreasing or if it is the first step\n",
-    "            L2norm_old = L2norm\n",
-    "            Fp_lastgood = new_state.defGrad_plastic        \n",
-    "            \n",
+    "        # start residual loop\n",
+    "        residual_not_converged = False\n",
+    "        for residual_iter in range(0, max_residual_iter):\n",
+    "\n",
+    "            # residual convergence check\n",
+    "            if residual_iter==max_residual_iter:\n",
+    "                residual_not_converged = True\n",
+    "                break\n",
+    "\n",
+    "            # Make initial guess\n",
+    "            if residual_iter == 0 and hardness_iter == 0:\n",
+    "                new_state.defGrad_elastic = current_state.defGrad_elastic\n",
+    "                new_state.defGrad_plastic = np.matmul(np.linalg.inv(new_state.defGrad_elastic), new_state.defGrad)\n",
+    "                new_state.hardness = current_state.hardness\n",
+    "\n",
+    "            # elastic stress calculations\n",
+    "            (C_e, E_e, S, tau) = elasticCalculations(num_slip_sys, schmid, elastTensor, new_state.defGrad_elastic)\n",
+    "\n",
+    "            # compute residual\n",
+    "            (L2norm, residual) = compute_residual(current_state, new_state, gamma_dot_0, num_slip_sys, tau, m_param, schmid, dt)\n",
+    "\n",
+    "            # convergence check\n",
+    "            if L2norm < L2norm_tolerance:            \n",
+    "                break\n",
+    "            elif residual_iter > 0 and L2norm > L2norm_old:\n",
+    "                new_state.defGrad_plastic = Fp_lastgood\n",
+    "                new_state.defGrad_elastic = new_state.defGrad*np.linalg.inv(new_state.defGrad_plastic)    \n",
+    "                dFp = 0.5*dFp\n",
+    "            else:\n",
+    "                # Apply dFp\n",
+    "                dFp_matrix = dFp.reshape(3,3)\n",
+    "                new_state.defGrad_plastic += dFp_matrix\n",
+    "                if np.linalg.det(new_state.defGrad_plastic) > 1.1 or np.linalg.det(new_state.defGrad_plastic) < 0.9:\n",
+    "                    print(\"Questionable det(new_state.defGrad_plastic)1: %d\\n\", np.linalg.det(new_state.defGrad_plastic));\n",
+    "                \n",
+    "                new_state.defGrad_elastic = new_state.defGrad*np.linalg.inv(new_state.defGrad_plastic)\n",
+    "                # proceed to solve if residual is decreasing or if it is the first step\n",
+    "                L2norm_old = L2norm\n",
+    "                Fp_lastgood = new_state.defGrad_plastic        \n",
+    "\n",
     "            # Compute Jacobian\n",
     "            J = jacobian(current_state, new_state, dt, elastTensor, num_slip_sys, schmid, S, C_e, gamma_dot_0, m_param)       \n",
     "\n",
@@ -474,47 +458,50 @@
     "            # Solve\n",
     "            dFp =  np.linalg.solve(J, -1.0*residualVector)  \n",
     "            # TODO: add try catch for the solution dFp\n",
-    "        \n",
-    "        \n",
-    "        # Apply dFp\n",
-    "        dFp_matrix = dFp.reshape(3,3)\n",
-    "        new_state.defGrad_pastic += dFp_matrix\n",
-    "        new_state.defGrad_eastic = new_state.defGrad*np.linalg.inv(new_state.defGrad_pastic)\n",
-    "        \n",
-    "        #TODO: check det of new jacobian\n",
-    "    \n",
-    "    if residual_not_converged:\n",
-    "        print(\"Max residual iteration reached!\")\n",
-    "        break\n",
-    "        \n",
-    "    #update hardness\n",
-    "    hardness_error = updateHardness_vocekocks(current_state, new_state, dt, m_param, g_0, gamma_dot_0, G_0, g_s_0, gamma_dot_s, omega, num_slip_sys, schmid, elastTensor)\n",
-    "    \n",
-    "    # hardness convergence check\n",
-    "    if hardness_error < hardness_change_tolerance:\n",
-    "        break\n",
     "\n",
-    "        \n",
-    "#Scale Fp, det(Fp) = 1\n",
     "\n",
-    "scale = np.linalg.det(new_state.defGrad_pastic)**(1.0/3.0)\n",
-    "new_state.defGrad_pastic /= scale\n",
-    "new_state.defGrad_eastic = new_state.defGrad*np.linalg.inv(new_state.defGrad_pastic)    \n",
+    "            # Apply dFp\n",
+    "            dFp_matrix = dFp.reshape(3,3)\n",
+    "            new_state.defGrad_plastic += dFp_matrix\n",
+    "            if np.linalg.det(new_state.defGrad_plastic) > 1.1 or np.linalg.det(new_state.defGrad_plastic) < 0.9:\n",
+    "                    print(\"Questionable det(new_state.defGrad_plastic)1: %d\\n\", np.linalg.det(new_state.defGrad_plastic));\n",
+    "            new_state.defGrad_elastic = new_state.defGrad*np.linalg.inv(new_state.defGrad_plastic)\n",
     "\n",
-    "# recompute elastic quantities\n",
-    "(C_e, E_e, S, tau) = elasticCalculations(num_slip_sys, schmid, elastTensor, new_state.defGrad_elastic)\n",
+    "            if residual_not_converged:\n",
+    "                print(\"Max residual iteration reached!\")\n",
+    "                break\n",
     "\n",
-    "cauchy = new_state.defGrad_elastic*S*np.transpose(new_state.defGrad_elastic)/np.linalg.det(new_state.defGrad_elastic)\n",
-    "deviatoric = cauchy - (np.trace(cauchy)/3.0)*np.identity(3)\n",
+    "        #update hardness\n",
+    "#         hardness_error = updateHardness_vocekocks(current_state, new_state, dt, m_param, g_0, gamma_dot_0, G_0, g_s_0, gamma_dot_s, omega, num_slip_sys, schmid, elastTensor)\n",
+    "        # For HCP lattic, no hardness:\n",
+    "        hardness_error = 0.0\n",
     "\n",
-    "stress = deviatoric + new_state.pressure*np.identity(3)\n",
+    "        # hardness convergence check\n",
+    "        if hardness_error < hardness_change_tolerance:\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "    #Scale Fp, det(Fp) = 1\n",
+    "\n",
+    "    scale = np.linalg.det(new_state.defGrad_plastic)**(1.0/3.0)\n",
+    "    new_state.defGrad_plastic /= scale\n",
+    "    new_state.defGrad_elastic = new_state.defGrad*np.linalg.inv(new_state.defGrad_plastic)    \n",
+    "\n",
+    "    # recompute elastic quantities\n",
+    "    (C_e, E_e, S, tau) = elasticCalculations(num_slip_sys, schmid, elastTensor, new_state.defGrad_elastic)\n",
+    "\n",
+    "    cauchy = new_state.defGrad_elastic*S*np.transpose(new_state.defGrad_elastic)/np.linalg.det(new_state.defGrad_elastic)\n",
+    "    deviatoric = cauchy - (np.trace(cauchy)/3.0)*np.identity(3)\n",
+    "\n",
+    "    stress = deviatoric + new_state.pressure*np.identity(3)\n",
+    "    current_state = new_state\n",
     "print(stress)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.10 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -528,7 +515,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.7.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8679167792fb1d44fc4674e1deaabc0f81d9a6a402b63cf7e0830ae2b404cd11"
+   }
   }
  },
  "nbformat": 4,
